--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT/Apache-2 (Permissive License Stack)",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.48.0",
+    "better-sqlite3": "^7.5.0",
     "csv-parse": "^5.0.4",
     "date-fns": "^2.28.0",
     "get-stream": "^6.0.1"
