--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "better-sqlite3": "^7.5.0",
     "csv-parse": "^5.0.4",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.0.0",
     "get-stream": "^6.0.1"
   }
 }
