--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "csv-parse": "^5.0.4",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
-    "get-stream": "^6.0.1"
+    "get-stream": "^6.0.1",
+    "minimist": "^1.2.5"
   }
 }
